unpackaged/main/default/objects/Post_Call_Survey__c/Post_Call_Survey__c.object-meta.xml
<CustomObject>
    <label>Post Call Survey</label>
    <nameField>
        <displayFormat>PCS-{0000}</displayFormat>
        <label>Post Call Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Call Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>