unpackaged/main/default/objects/Post_Call_Survey__c/fields/Post_Call_Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>Post_Call_Survey_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Call Survey Question</label>
    <referenceTo>Post_Call_Survey_Question__c</referenceTo>
    <relationshipLabel>Post Call Surveys</relationshipLabel>
    <relationshipName>Post_Call_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>