unpackaged/main/default/objects/Post_Call_Survey__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Store the question text for the survey.</description>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>