unpackaged/main/default/objects/Post_Call_Survey__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Store the answer captured corresponding to the question asked in the survey.</description>
    <label>Response</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>