unpackaged/main/default/objects/Post_Call_Survey__c/fields/Response_Text__c.field-meta.xml
<CustomField>
    <fullName>Response_Text__c</fullName>
    <formula>IF( Response__c = 1,"Perfect",
IF( Response__c = 2,"Excellent",
IF( Response__c = 3,"Good", 
IF( Response__c = 4,"Frustrating","Totally Unacceptable"))))</formula>
    <label>Response (Text)</label>
    <type>Text</type>
</CustomField>