unpackaged/main/default/objects/Post_Call_Survey__c/fields/Survey_Vendor_Call_Key__c.field-meta.xml
<CustomField>
    <fullName>Survey_Vendor_Call_Key__c</fullName>
    <description>Store the Contact Id for the Post Call Survey interaction.</description>
    <label>Survey Vendor Call Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>