unpackaged/main/default/objects/Post_Call_Survey__c/fields/Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call__c</fullName>
    <description>Store the link to the Voice Call that triggered the Post Call Survey.</description>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Post Call Surveys</relationshipLabel>
    <relationshipName>Post_Call_Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>