unpackaged/main/default/objects/Post_Call_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Response__c</columns>
    <columns>Voice_Call__c</columns>
    <columns>Post_Call_Survey_Question__c</columns>
    <columns>Survey_Vendor_Call_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>